--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cross-env": "^7.0.3",
     "express": "^4.18.2",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
@@ -12,9 +13,9 @@
     "supertest": "^6.3.3"
   },
   "scripts": {
-    "test": "set NODE_ENV=test && jest --detectOpenHandles --runInBand --forceExit --watchAll --coverage --verbose",
-    "start": "set NODE_ENV=development && nodemon ./bin/www.js",
-    "start-docker": "set NODE_ENV=docker && npx sequelize-cli db:create && npx sequelize-cli db:create --env docker-test && npx sequelize-cli db:migrate && npx sequelize-cli db:migrate --env docker-test && npx sequelize-cli db:seed:all && node ./bin/www.js",
-    "test-docker": "set NODE_ENV=docker-test && jest --detectOpenHandles --runInBand --forceExit --watchAll --coverage --verbose"
-  }  
+    "test": "cross-env NODE_ENV=test && jest --detectOpenHandles --runInBand --forceExit --watchAll --coverage --verbose",
+    "start": "cross-env NODE_ENV=development && nodemon ./bin/www.js",
+    "start-docker": "cross-env NODE_ENV=docker && npx sequelize-cli db:create && npx sequelize-cli db:create --env docker-test && npx sequelize-cli db:migrate && npx sequelize-cli db:migrate --env docker-test && npx sequelize-cli db:seed:all && node ./bin/www.js",
+    "test-docker": "cross-env NODE_ENV=docker-test && jest --detectOpenHandles --runInBand --forceExit --watchAll --coverage --verbose"
+  }
 }
